<package format="3">
  <name>hsrb_diagnostic_broadcaster</name>
  <version>2.1.0</version>
  <description>Ros controller plugins for HSR-B's diagnostics.</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Hiroaki Yaguchi</author>
  <author>Keisuke Takeshita</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lifecycle_msgs</depend>
  <depend>controller_interface</depend>
  <depend>diagnostic_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>hsrb_servomotor_protocol</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>