<package format="3">
  <name>hsrb_digital_io</name>
  <version>2.1.0</version>
  <description>HSR-B digital I/O sketch for Arduino</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Keisuke Takeshita</author>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>python3-mock</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>