<package format="3">
  <name>hsrb_power_ecu</name>
  <version>2.1.0</version>
  <description>Robot hardware class to commnucaite with power ECU</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <license>BSD 3-clause Clear License</license>

  <author>Tamaki Nishino</author>
  <author>Masayuki Masuda</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>boost</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>