<package format="3">
  <name>hsrb_interface_py</name>
  <version>2.1.0</version>
  <description>HSR-B Python Interface</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <author>Hiroaki Yaguchi</author>
  <author>Hiromichi Nakashima</author>
  <author>Keisuke Takeshita</author>
  <author>Minori Mizuno</author>
  <author>Satoru Onoda</author>
  <author>Takafumi Mizuno</author>
  <author>Takuma Sugino</author>

  <license>BSD 3-clause Clear License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake_nose</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tmc_robot_kinematics_model</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend version_gte="0.5.16">tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tmc_msgs</exec_depend>
  <exec_depend>tmc_planning_msgs</exec_depend>
  <exec_depend>tmc_manipulation_msgs</exec_depend>
  <exec_depend>tmc_control_msgs</exec_depend>
  <exec_depend>tmc_voice_msgs</exec_depend>
  <exec_depend>ipython3</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <test_depend>python3-mock</test_depend>
  <test_depend>hsrb_description</test_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>