<package format="3">
  <name>hsrb_interfaces</name>
  <version>2.0.0</version>
  <description>HSR-B API Libraries</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <author>Keisuke Takeshita</author>

  <license>TMC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hsrb_interface_py</exec_depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
